fixed slight off-centering and edited picutre size

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
     color: #4c4f69;
     padding-right: var(--bs-gutter-x, .01rem);
     padding-left:  var(--bs-gutter-x, .01rem);
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .buttonAndTextContainer{
@@ -32,7 +32,11 @@
     justify-content: center;
 }
 .imageLineupContainer img{
-    width: 100%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .imageLineupContainer{
     display: grid;
